--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYBE HTML>
 <html>	
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
 		<title>rajeshtask2</title>
 		<link rel="stylesheet" href="rajeshtask2.css">
 			<style>
